apps/base/tool-miniflux/deploy/reminiflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reminiflux
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/component: reminiflux
