apps/base/tool-miniflux/deploy/reminiflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reminiflux
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Reminiflux
    gethomepage.dev/description: Alternative web frontend for Miniflux
    gethomepage.dev/icon: miniflux
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=miniflux,app.kubernetes.io/component=reminiflux"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - miniflux.tool.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: miniflux.tool.web_domain_name
    http:
      paths:
      - path: /reminiflux
        pathType: Prefix
        backend:
          service:
            name: reminiflux
            port:
              name: http
