apps/base/tool-miniflux/deploy/reminiflux/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-reminiflux
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/component: reminiflux

  ingress:
    # Allow from the ingress controller
    - ports:
        - port: http
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
